duniverse/menhirLib.20200211/test/static/bad/invalid-token-in-prec.mly
%start<int> a
%%

a: %prec F {}
